created sprite class

--- a/src/index.scss
+++ b/src/index.scss
@@ -16,7 +16,7 @@ html, body {
     align-items: center;
     // justify-content: space-around;
     height: 100vh;
-    width: 100%;
+    // width: 100%;
 }
 
 #gameTitle{
@@ -88,7 +88,6 @@ html, body {
         // background-image: -webkit-radial-gradient(#cccc66,#cccc33,#e4c33d );
         background-image: -webkit-radial-gradient(#d3b445,#d3b21f,#f1c207 );
         z-index: -1;
-        // height: min-content;
     }
 }
 
