--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,229 @@
 html, body {
-    height: 100vh;
+    height: 100%;
     overflow: hidden;
     // margin: 0;
     // padding: 0;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
 @font-face {
     font-family: 'customFont';
     src: url('../src/gomarice_atama_simple.TTF') format('truetype')
+}
+
+#score {
+    z-index:20;
+    width: 20%;
+    height: 30%;
+    text-align: center;
+    outline: 5px outset black;
+    font-family: 'customFont';
+    font-size: 300%;
+    // position:absolute;
+}
+
+// #empty_container {
+//     z-index: 0;
+//     display: flex;
+//     width: 20%;
+//     height: 20%;
+//     outline: 5px outset black;
+// }
+
+#background_container {
+    background-color: #4dbef7;
+    z-index: 0;
+    outline: 5px outset black;
+    display: flex;
+    width: 70%;
+    height: 55%;
+    justify-content: center;
+    align-items: flex-end;
+}
+#hello_world {
+    text-align: center;
+    font-family: 'customFont';
+    font-size: 170%;
+}
+
+// title page
+#game_container {
+    display: flex;
+    width: 60%;
+    height: 66%;
+    background-color: #ffffcc;
+    // border: 3px solid black;
+    outline: 5px outset black;
+    flex-wrap: wrap;
+    position: absolute;
+    z-index: 1;
+}
+
+#top_title_box {
+    display: flex;
+    width: 100%;
+    height: 25%;
+    // outline: 5px outset black;
+    align-items: center;
+}
+
+#empty_top_div {
+    width: 24%;
+}
+
+#title {
+    width: 51%;
+    text-align: center;
+    font-family: 'customFont';
+    font-size: 300%;
+    
+    // outline: 5px outset black;
+}
+
+#icons_div {
+    display: flex;
+    width: 25%;
+    // outline: 5px outset black;
+}
+
+#empty_icon_div {
+    width: 40%;
+}
+
+
+#bottom_title_box {
+    display: flex;
+    width: 100%;
+    height: 75%;
+    // outline: 5px outset black;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+
+
+#controls{
+    width: 70%;
+    height: 5%;
+    text-align: center;
+    font-family: 'customFont';
+    font-size:150%;
+    color: orange;
+
+    animation-name: change-color;
+    animation-duration: 6s;
+    animation-iteration-count: infinite;
+    // outline: 5px outset black;
+}
+
+@keyframes change-color {
+    25% {
+      color: #00A4BD;
+    }
+    50% {
+      color: #FF7A59;
+    }
+    75% {
+      color: #00BDA5;
+    }
+    100% {
+      color: #6A78D1;
+    }
+}
+
+#keyboard {
+    width: 70%;
+    height: 30%;
+    position: relative;
+    // animation: animate-images 3s linear infinite;
+    // animation-duration: 5s;
+    // outline: 5px outset black;
+}
+
+#keyboard_img {
+    width: 100%;
+    height: 100%;
+    visibility: visible;
+    position: absolute;
+    // animation-name: animate-images;
+    // animation-duration: 4s;
+    // animation-delay: 4s;
+    // animation-iteration-count: infinite;
+
+    
+}
+
+// #keyboard_press_img {
+//     visibility: hidden;
+//     position: absolute;
+    
+// }
+
+// @keyframes animate-images {
+//     0% {
+//       visibility: hidden;
+//     }
+//     100% {
+//       visibility: visible;
+//     }
+//   }
+
+#start {
+    width:31%;
+    height:40%;
+    display: flex;
+}
+
+#startButton {
+    // outline: 5px outset black;
+    background-image: url('../src/title/start.png');
+    background-color: transparent;
+    background-repeat: no-repeat;
+    width: 100%; /* adjust width to fit your image */
+    height: 100%; /* adjust height to fit your image */
+    border:none;
+}
+
+#startButton:hover {
+    background-image: url('../src/title/start_hovered.png');
+    background-color: transparent;
+    cursor: pointer; /* show pointer cursor on hover */
+}
+
+#startButton:active {
+    background-image: url('../src/title/start_clicked.png');
+    background-color: transparent;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+#canvas {
+    position: absolute;
+    outline: 5px outset black;
+    z-index:0;
 }
 
 .front {
@@ -18,6 +234,18 @@ html, body {
     height: 100vh;
     // width: 100%;
 }
+
+// #stage_canvas{
+//     z-index: 0;
+//     position: absolute;
+//     outline: 5px outset black;
+// }
+
+// #sprite_canvas {
+//     position:absolute;
+//     z-index: 0
+//     // background-color: transparent
+// }
 
 #gameTitle{
     width: 50%;
