--- a/src/index.scss
+++ b/src/index.scss
@@ -18,24 +18,32 @@ body {
     src: url('../src/gomarice_atama_simple.TTF') format('truetype')
 }
 
-#score {
-    z-index:20;
-    width: 20%;
-    height: 30%;
-    text-align: center;
-    outline: 5px outset black;
-    font-family: 'customFont';
-    font-size: 300%;
-    // position:absolute;
+@font-face {
+    font-family: 'customFont2';
+    src: url('../src/impact.TTF') format('truetype')
 }
 
-// #empty_container {
-//     z-index: 0;
-//     display: flex;
-//     width: 20%;
-//     height: 20%;
-//     outline: 5px outset black;
-// }
+#score_div {
+    position:absolute;
+    z-index:20;
+    width: 20%;
+    height: 43%;
+    text-align: center;
+    margin-bottom: 30%;
+    // outline: 5px outset black;
+    font-family: 'customFont2';
+    font-size: 300%;
+    color: #c5273d;
+    
+}
+
+#empty_container {
+    z-index: 0;
+    display: flex;
+    width: 20%;
+    height: 30%;
+    // outline: 5px outset black;
+}
 
 #background_container {
     background-color: #4dbef7;
@@ -43,14 +51,43 @@ body {
     outline: 5px outset black;
     display: flex;
     width: 70%;
-    height: 55%;
-    justify-content: center;
+    margin-bottom: 4%;
+    height: 80%;
+    // justify-content: center;
     align-items: flex-end;
 }
+#timer_div {
+    display: flex;
+    width: 33%;
+    height: 15.5%;
+    // outline: 5px outset black;
+    font-family: 'customFont2';
+    font-size: 180%;
+    justify-content: space-around;
+}
+
+#timer_bar {
+    margin-top: 8%;
+    height: 50%;
+    width: 75%;
+}
+
 #hello_world {
+    width: 33%;
+    // height: 100%;
     text-align: center;
     font-family: 'customFont';
-    font-size: 170%;
+    // outline: 5px outset black;
+    font-size: 140%;
+}
+#lives {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 27%;
+    height: 12%;
+    margin-bottom: 0.09%;
+    // outline: 5px outset black;
 }
 
 // title page
@@ -90,11 +127,13 @@ body {
 #icons_div {
     display: flex;
     width: 25%;
+    height: 90%;
     // outline: 5px outset black;
 }
 
 #empty_icon_div {
     width: 40%;
+    
 }
 
 
@@ -177,7 +216,7 @@ body {
 //   }
 
 #start {
-    width:31%;
+    width:40%;
     height:40%;
     display: flex;
 }
@@ -208,121 +247,8 @@ img {
     max-height: 100%;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
 #canvas {
     position: absolute;
     outline: 5px outset black;
     z-index:0;
-}
-
-.front {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    // justify-content: space-around;
-    height: 100vh;
-    // width: 100%;
-}
-
-// #stage_canvas{
-//     z-index: 0;
-//     position: absolute;
-//     outline: 5px outset black;
-// }
-
-// #sprite_canvas {
-//     position:absolute;
-//     z-index: 0
-//     // background-color: transparent
-// }
-
-#gameTitle{
-    width: 50%;
-    height: 50%;
-    text-align: center;
-
-    font-weight: 700;
-    margin-top:3%;
-    -webkit-text-stroke-width: 0.15rem;
-    -webkit-text-stroke-color: black;
-    font-family: 'customFont';
-    font-size: 700%;
-    background-image: linear-gradient(45deg, green, blue);
-    background-image: -webkit-linear-gradient(45deg, green, blue);
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -webkit-transform: scale(1.2,1);
-    transform: scale(1.2,1);
-    z-index: 3;
-    flex-shrink: 2;
-}
-
-#playButton{
-    background-image: url('../src/play_button.png');
-    background-repeat: no-repeat;
-    background-color: transparent;
-    width: 15.5%;
-    max-width: 50vw;
-    height: 30%;
-    margin-top: auto;
-    margin-bottom: 10%;
-    border: none;
-    z-index: 3;
-    cursor: pointer;
-    flex-shrink: 2;
-    // transition: width 0.1s;
-    
-}
-#playButton:hover{
-    background-image: url('../src/play_button_hover.png');
-    background-repeat: no-repeat;
-    background-color: transparent;
-    width: 16.2%;
-    max-width: 50vw;
-    height: 30%;
-    margin-top: auto;
-    margin-bottom: 10%;
-    border: none;
-    z-index: 3;
-    cursor: pointer;
-    flex-shrink: 2;
-}
-
-.back {
-    
-    position: fixed;
-    top: 0;
-    left: 0;
-    
-    width: 100%;
-    height: auto;
-    // height: auto;
-
-    #titleBG {
-        width: 100%;
-        height: 100vh;
-        // background-image: -webkit-radial-gradient(#cccc66,#cccc33,#e4c33d );
-        background-image: -webkit-radial-gradient(#d3b445,#d3b21f,#f1c207 );
-        z-index: -1;
-    }
-}
-
-.game {
-    display: none;
-}
-
-.load{
-    display: none;
 }
