--- a/src/index.scss
+++ b/src/index.scss
@@ -15,12 +15,12 @@ body {
 
 @font-face {
     font-family: 'customFont';
-    src: url('./assets/gomarice_atama_simple.TTF') format('truetype')
+    src: url('assets/gomarice_atama_simple.TTF') format('truetype')
 }
 
 @font-face {
     font-family: 'customFont2';
-    src: url('./assets/impact.TTF') format('truetype')
+    src: url('  assets/impact.TTF') format('truetype')
 }
 
 #score_div {
