--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,8 @@
-html, body {
+html,
+body {
     height: 100%;
     overflow: hidden;
-    // margin: 0;
+    margin: 0;
     // padding: 0;
 }
 
@@ -11,30 +12,173 @@ body {
     justify-content: center;
     align-items: center;
     width: 100%;
+    // background-color: skyblue;
+    // background-image: url('../assets/title/nintendo-switch-bg.png');
+    // background-repeat: no-repeat;
+    // background-size: contain;
+    // background-position: center center;
+    // object-fit: contain;
+
+    // @media(max-height: 600px) {
+    //     background-size: contain;
+    // }
+
+    // @media(max-height: 500px),
+    // (max-width: 500px) {
+    //     background-size: cover;
+    // }
+
+    // @media (max-width: 550px),
+    // (max-height: 400px) {
+    //     min-width: 500px;
+    //     min-height: 400px;
+    //     background-size: auto;
+    //     overflow: hidden;
+    // }
+
+    background-color: skyblue;
 }
 
-@font-face {
-    font-family: 'customFont';
-    src: url('https://kennytram.github.io/Mayhem-Overload/assets/gomarice_atama_simple.TTF') format('truetype')
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+// @font-face {
+//     font-family: 'customFont';
+//     src: url('https://kennytram.github.io/Mayhem-Overload/assets/gomarice_atama_simple.TTF') format('truetype')
+// }
+
+// @font-face {
+//     font-family: 'customFont2';
+//     src: url('https://kennytram.github.io/Mayhem-Overload/assets/impact.TTF') format('truetype')
+// }
+
+// title page
+
+
+#game-container {
+    display: flex;
+    width: 960px;
+    height: 720px;
+
+    position: fixed;
+
+    min-width: 550px;
+    min-height: 400px;
+
+    border-radius: 5px;
+    position: relative;
+    z-index: 1;
+    background-color: #ffffcc;
+    // border: 3px solid black;
+    outline: 5px outset black;
+
+    @media(max-height: 600px) {
+        width: 57%;
+    }
+
+    // @media(max-height: 00px) {
+    //     width: 10%;
+    // }
 }
 
-@font-face {
-    font-family: 'customFont2';
-    src: url('https://kennytram.github.io/Mayhem-Overload/assets/impact.TTF') format('truetype')
+#game-wrapper {
+    display: flex;
+    width: 100%;
+    height: 100%;
 }
 
-#score_div {
-    position:absolute;
-    z-index:20;
-    width: 20%;
-    height: 43%;
-    text-align: center;
-    margin-bottom: 30%;
-    // outline: 5px outset black;
-    font-family: 'customFont2';
-    font-size: 300%;
-    color: #c5273d;
+#top-title-box {
+    display: flex;
+    width: 100%;
+    // align-items: center;
+    position: relative;
+    margin-top: 20px;
     
+    justify-content: space-between;
+}
+
+#score-div {
+    // text-align: center;
+    // outline: 5px outset black;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 20px;
+    color: #c5273d;
+    // display: none;
+    width: 23%;
+    max-width: 100%;
+    padding-left: 16px;
+}
+
+#title {
+    text-align: center;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 32px;
+    width: 32%;
+    max-width: 100%;
+    // outline: 5px outset black;
+}
+
+#icons-div {
+    display: flex;
+    width: 20%;
+    height: 90%;
+    position: relative;
+    // outline: 5px outset black;
+}
+
+
+.social-icon {
+    // transition: top 0.2s ease-in-out;
+    // top: 0;
+    position: absolute;
+    width: 70px;
+    max-width: 100%;
+    margin-top: 10px;
+    // margin-left: 10px;
+}
+
+.social-icon:hover {
+    top: -10px;
+
+}
+
+@keyframes float-animation {
+    0% {
+        box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+        transform: translateY(0px);
+    }
+
+    50% {
+        box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+        transform: translateY(-20px);
+    }
+
+    100% {
+        box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+        transform: translateY(0);
+    }
+}
+
+
+#github-icon {
+    border-radius: 50%;
+    animation: float-animation 3s ease-in-out infinite;
+    overflow: hidden;
+    box-sizing: border-box;
+    box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+    transform: translateY(0px);
+    position: relative;
+    margin-left: 40px;
+}
+
+#linkedin-icon {
+    // border-radius: 12px;
+    animation: float-animation 3s ease-in-out infinite;
+    overflow: hidden;
+    box-sizing: border-box;
+    box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+    transform: translateY(0px);
+    position: relative;
+    border-radius: 20px;
 }
 
 #empty_container {
@@ -56,12 +200,13 @@ body {
     // justify-content: center;
     align-items: flex-end;
 }
+
 #timer_div {
     display: flex;
     width: 33%;
     height: 15.5%;
     // outline: 5px outset black;
-    font-family: 'customFont2';
+    font-family: 'Press Start 2P', cursive;
     font-size: 180%;
     justify-content: space-around;
 }
@@ -75,11 +220,12 @@ body {
 #hello_world {
     width: 33%;
     text-align: center;
-    font-family: 'customFont';
+    font-family: 'Press Start 2P', cursive;
     outline: 5px outset black;
     font-size: 130%;
     background: yellow;
 }
+
 #lives {
     display: flex;
     justify-content: space-evenly;
@@ -90,50 +236,21 @@ body {
     // outline: 5px outset black;
 }
 
-// title page
-#game_container {
-    display: flex;
-    width: 60%;
-    height: 66%;
-    background-color: #ffffcc;
-    // border: 3px solid black;
-    outline: 5px outset black;
-    flex-wrap: wrap;
-    position: absolute;
-    z-index: 1;
-}
 
-#top_title_box {
-    display: flex;
-    width: 100%;
-    height: 25%;
-    // outline: 5px outset black;
-    align-items: center;
-}
+
+
 
 #empty_top_div {
     width: 24%;
 }
 
-#title {
-    width: 51%;
-    text-align: center;
-    font-family: 'customFont';
-    font-size: 300%;
-    
-    // outline: 5px outset black;
-}
 
-#icons_div {
-    display: flex;
-    width: 25%;
-    height: 90%;
-    // outline: 5px outset black;
-}
+
+
 
 #empty_icon_div {
     width: 40%;
-    
+
 }
 
 
@@ -149,12 +266,12 @@ body {
 
 
 
-#controls{
+#controls {
     width: 70%;
     height: 5%;
     text-align: center;
-    font-family: 'customFont';
-    font-size:150%;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 150%;
     color: orange;
 
     animation-name: change-color;
@@ -165,16 +282,19 @@ body {
 
 @keyframes change-color {
     25% {
-      color: #00A4BD;
+        color: #00A4BD;
     }
+
     50% {
-      color: #FF7A59;
+        color: #FF7A59;
     }
+
     75% {
-      color: #00BDA5;
+        color: #00BDA5;
     }
+
     100% {
-      color: #6A78D1;
+        color: #6A78D1;
     }
 }
 
@@ -197,13 +317,13 @@ body {
     // animation-delay: 4s;
     // animation-iteration-count: infinite;
 
-    
+
 }
 
 // #keyboard_press_img {
 //     visibility: hidden;
 //     position: absolute;
-    
+
 // }
 
 // @keyframes animate-images {
@@ -216,8 +336,8 @@ body {
 //   }
 
 #start {
-    width:40%;
-    height:40%;
+    width: 40%;
+    height: 40%;
     display: flex;
 }
 
@@ -226,15 +346,18 @@ body {
     background-image: url('https://kennytram.github.io/Mayhem-Overload/assets/title/start.png');
     background-color: transparent;
     background-repeat: no-repeat;
-    width: 100%; /* adjust width to fit your image */
-    height: 100%; /* adjust height to fit your image */
-    border:none;
+    width: 100%;
+    /* adjust width to fit your image */
+    height: 100%;
+    /* adjust height to fit your image */
+    border: none;
 }
 
 #startButton:hover {
     background-image: url('https://kennytram.github.io/Mayhem-Overload/assets/title/start_hovered.png');
     background-color: transparent;
-    cursor: pointer; /* show pointer cursor on hover */
+    cursor: pointer;
+    /* show pointer cursor on hover */
 }
 
 #startButton:active {
@@ -242,13 +365,8 @@ body {
     background-color: transparent;
 }
 
-img {
-    max-width: 100%;
-    max-height: 100%;
-}
-
 #canvas {
     position: absolute;
     outline: 5px outset black;
-    z-index:0;
+    z-index: 0;
 }
