--- a/src/index.scss
+++ b/src/index.scss
@@ -12,7 +12,7 @@ body {
     justify-content: center;
     align-items: center;
     width: 100%;
-    // background-color: skyblue;
+    background-color: skyblue;
     // background-image: url('../assets/title/nintendo-switch-bg.png');
     // background-repeat: no-repeat;
     // background-size: contain;
@@ -104,20 +104,23 @@ body {
     font-size: 20px;
     color: #c5273d;
     // display: none;
-    width: 23%;
+    width: 20%;
     max-width: 100%;
     padding-left: 16px;
+    z-index: 3;
     // position: absolute;
 }
 
 #title {
     text-align: center;
     font-family: 'Press Start 2P', cursive;
-    font-size: 32px;
-    width: 32%;
+    font-size: 40px;
+    width: 40%;
     max-width: 100%;
+    padding-top: 5px;
+    padding-bottom: 5px;
     // position: absolute;
-    // outline: 5px outset black;
+    // outline: 4px solid #1e1e1e;
 }
 
 #icons-div {
@@ -126,6 +129,7 @@ body {
     height: 90%;
     position: relative;
     white-space: nowrap;
+    z-index: 3;
     // outline: 5px outset black;
 }
 
@@ -142,6 +146,7 @@ body {
     max-width: 100%;
     margin-top: 10px;
     // margin-left: 10px;
+    display: none;
 }
 
 .social-icon:hover {
@@ -157,7 +162,7 @@ body {
 
     50% {
         box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
-        transform: translateY(-20px);
+        transform: translateY(-15px);
     }
 
     100% {
@@ -176,6 +181,7 @@ body {
     transform: translateY(0px);
     position: relative;
     margin-left: 40px;
+    max-width: 100%;
 }
 
 #linkedin-icon {
@@ -187,6 +193,30 @@ body {
     transform: translateY(0px);
     position: relative;
     border-radius: 10%;
+    max-width: 100%;
+}
+
+#lives {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    max-width: 100%;
+    max-height: 100%;
+    // margin-bottom: 0.09%;
+    position: absolute;
+    // outline: 5px outset black;
+    top: -6px;
+    z-index: 2;
+}
+
+#lives > img {
+    width: 40px;
+    height: 40px;
+    margin-right: 4px;
+    max-width: 100%;
+    max-height: 100%;
+    padding-left: 15px;
+    
 }
 
 #empty_container {
@@ -207,6 +237,16 @@ body {
     height: 80%;
     // justify-content: center;
     align-items: flex-end;
+}
+
+#desc-text {
+    padding-top: 42px;
+    width: 100%;
+    height: 10%;
+    text-align: center;
+    font-family: 'Press Start 2P', cursive;
+    // outline: 5px outset black;
+    font-size: 130%;
 }
 
 // #timer_div {
@@ -234,15 +274,7 @@ body {
 //     background: yellow;
 // }
 
-// #lives {
-//     display: flex;
-//     justify-content: space-evenly;
-//     align-items: center;
-//     width: 27%;
-//     height: 12%;
-//     margin-bottom: 0.09%;
-//     // outline: 5px outset black;
-// }
+
 
 
 
@@ -375,6 +407,5 @@ body {
 
 #canvas {
     position: absolute;
-    outline: 5px outset black;
     z-index: 0;
 }
