--- a/src/index.scss
+++ b/src/index.scss
@@ -146,7 +146,7 @@ body {
     max-width: 100%;
     margin-top: 10px;
     // margin-left: 10px;
-    display: none;
+    // display: none;
 }
 
 .social-icon:hover {
@@ -197,7 +197,6 @@ body {
 }
 
 #lives {
-    display: flex;
     justify-content: space-evenly;
     align-items: center;
     max-width: 100%;
@@ -207,6 +206,8 @@ body {
     // outline: 5px outset black;
     top: -6px;
     z-index: 2;
+
+    display:none;
 }
 
 #lives > img {
@@ -300,8 +301,8 @@ body {
     height: 75%;
     // outline: 5px outset black;
     justify-content: center;
-    align-items: center;
     flex-wrap: wrap;
+    margin-top: 10px;
 }
 
 
@@ -339,19 +340,18 @@ body {
 }
 
 #keyboard {
-    width: 70%;
-    height: 30%;
-    position: relative;
+    display: flex;
+    width: 100%;
+    height: 60%;
     // animation: animate-images 3s linear infinite;
     // animation-duration: 5s;
     // outline: 5px outset black;
 }
 
 #keyboard_img {
-    width: 100%;
-    height: 100%;
-    visibility: visible;
-    position: absolute;
+    // width: 200px;
+    max-width: 100%;   
+    // height: 100px;
     // animation-name: animate-images;
     // animation-duration: 4s;
     // animation-delay: 4s;
