--- a/src/index.scss
+++ b/src/index.scss
@@ -204,9 +204,9 @@ body {
     position: absolute;
     // outline: 5px outset black;
     top: -6px;
-    z-index: 22
+    z-index: 22;
 
-    display: flex;
+    display: none;
 }
 
 #lives>img {
