--- a/src/index.scss
+++ b/src/index.scss
@@ -10,7 +10,6 @@ body {
     display: flex;
     // flex-direction: column;
     justify-content: center;
-    align-items: center;
     width: 100%;
     background-color: skyblue;
     // background-image: url('../assets/title/nintendo-switch-bg.png');
@@ -37,6 +36,17 @@ body {
     // }
     font-family: 'Press Start 2P', cursive;
     background-color: skyblue;
+}
+
+#game-layer {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 999;
+    background-color: transparent;
+    align-items: center;
+    justify-content: center;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
@@ -95,6 +105,7 @@ body {
     padding-left: 16px;
     z-index: 30;
     display: none;
+    font-weight: 700;
     // visibility: hidden;
     // position: absolute;
 }
@@ -452,4 +463,39 @@ body {
     bottom: 30px;
     z-index: 2;
     font-family: 'Press Start 2P', cursive;
+}
+
+#tooltip {
+    display: flex;
+    position: absolute;
+    width: 350px;
+    height: 80px;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #ffffcc;
+    opacity: 0.5;
+    color: #1e1e1e;
+    z-index: 1000;
+    border-radius: 10px;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 20px;
+    text-align: center;
+    margin-top: 20px;
+}
+
+#tooltip-title {
+    font-size: 24px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-weight: 700;
+    text-align: center;
+}
+
+#tooltip-instruction {
+    font-size: 16px;
+    // margin-top: 20px;
+    font-weight: 400;
+    text-align: center;
+    line-height: 30px;
 }
